site/css/style.css
*, *:before, *:after { box-sizing: border-box; }

body { background: #f5f4f4; font-family: muli,avenir,helvetica neue,helvetica,ubuntu,roboto,noto,segoe ui,arial,sans-serif; line-height: 1.45; margin: 0; }

a { text-decoration: none; }
p { color: #444; line-height: 1.6; }
li { color: #444; line-height: 1.65; }
td { vertical-align: top; }
dl { line-height: 1.60; margin: 1.25rem; }
dd { margin-left: 1.5rem; }
ol li { line-height: 2; }

nav.top { align-items: center; display: flex; justify-content: flex-start; flex-wrap: wrap; height: 6rem; padding: 2rem 0; width: 100%; }
nav.top .logo { margin-left: 3rem; }
nav.top .logo img { vertical-align: bottom; }
nav.top .version { color: #999; font-size: .7rem; padding: 6px 0 0 .5rem; }
nav.top .version:hover { color: #e5a62e; }
nav.top ul { display: inline-block; list-style-type: none; margin: 0 .5em; vertical-align: middle; }
nav.top li { display: inline-block; padding: 0 1rem; }
nav.top ul a { color: #333; }
nav.top ul a:hover, nav.top ul a.selected { color: #d18c00; }
nav.top .github-logo { display: block; height: 1.8rem; margin-left: 1rem; width: 1.8rem; }

.content { margin: 0 20px; }

.cols-2 { display: flex; flex-wrap: wrap; }
.cols-2 > div { padding: 2em 5rem; width: 50%; }

.index a { color: #fff; }

.index nav.top .logo { cursor: default; pointer-events: none; }

.index header { margin: 1.6rem; margin-top: 4.6rem; }
.index header section { margin: 0 auto; text-align: center; }

.index header .logo { max-width: 80%; width: 450px; height: auto; }
.index header h2 { color: #000; font-size: 2.6em; font-weight: 200; line-height: 1.2em; margin: 2.1rem auto; max-width: 730px; }
.index header h3 { color: #666; font-size: 1.4em; font-weight: 200; letter-spacing: .02rem; line-height: 1.5em; margin: .5rem; }
.index header .button { background: #e6a621; border-radius: 3px; color: #fff6ED; cursor: pointer; display: inline-block; font-size: 1.1em; font-weight: bold; margin-top: 2rem; text-transform: uppercase; padding: .8rem 1.8rem .7em 1.8em; }
.index header .button:hover { background: #f3ad20; border-radius: 3px; color: #fff6ED; cursor: pointer; display: inline-block; font-size: 1.1em; font-weight: bold; margin-top: 2rem; text-transform: uppercase; padding: .8rem 1.8rem .7em 1.8em; }

.index body > section { margin: 4rem; }

.index .why { color: #fff; margin-bottom: 2rem; }
.index .why h2 { color: #ebb951; font-size: 1.8rem; font-weight: normal; }
.index .why p { color: #333; font-size: 1.3rem; font-weight: 200; line-height: 1.9rem; }

.index body > section.benchmark { background: #0a1922; color: #FFF; margin: 0; padding: 4.5rem 9rem; }
.index body > section.benchmark > div:first-child { display: inline-block; margin-bottom: -40px; position: relative; z-index: 2; }
.index body > section.benchmark > div:first-child h2 { margin-top: 0; }
.index body > section.benchmark > div:first-child a { color: #ebb951; float: right; font-size: .9em; }
.index body > section.benchmark > div:first-child a:hover { color: #ffd858; }

.benchmark h2 { font-size: 2rem; font-weight: normal; margin-bottom: .5rem; }
.benchmark h2 + p { color: #ddd; margin-bottom: 3rem; margin-top: .5rem; }
.benchmark .graph { position: relative; }
.benchmark .graph .program { color: #999; margin-bottom: 1em; }
.benchmark .graph .program span { color: #999; padding:0; }
.benchmark .graph .program a { color:#D4D4D4; font-size: .9em;}
.benchmark .graph .interpreter,
.benchmark .graph .allocations .interpreter{ display: none; }
.benchmark div p { font-size: 1.1rem; margin-bottom: 1px; margin-top: 15px; }
.benchmark div p a { color: #FFF; opacity: .999; }
.benchmark div p span { color: #aaa; font-size: 1rem; padding-left: 1rem; }
.benchmark .bar { background: linear-gradient(to right, #00fcd5, #006288); display: inline-block; height: 12px; margin-top: 1px; text-align: right; }
.benchmark span.time { color: #FFF; font-size: 16px; padding-left: 10px; }
.benchmark .allocations { font-size: .95em; position: absolute; right: 60px; top: 0; }
.benchmark .allocations .data { display: table; padding: 10px 0; }
.benchmark .allocations .data div { display: table-row; }
.benchmark .allocations .data div span { display: table-cell; padding:3px 8px; }
.benchmark .allocations .data div span:first-child { padding-left: 0; }
.benchmark .allocations .data span.allocs { color: #CCC; }
.benchmark .allocations h3 { column-span: 2; display:table-cell; font-size: 1.3em; font-weight: normal; letter-spacing: 1px;  margin: 0 0 10px 0; }
.benchmark .allocations h3 span { color: #CCC; font-size: .7em; }

.benchmark + .benchmark { padding-left: 5rem; padding-right: 8rem; }

.page-benchmarks h3 { margin-top: 4rem; }
.page-benchmarks pre { font-size: .8em; }
.page-benchmarks section.benchmark { border-radius: 3px; background: #0a1922; color: #FFF; margin-top: 1rem; padding: 34px 50px 50px 50px; }
.page-benchmarks section.benchmark h3,
.page-benchmarks .graph p a,
.page-benchmarks .graph p a:visited { color: #FFF; }
.page-benchmarks .graph p.program { display: none; }
.page-benchmarks .note { color: #999; font-size: .8em; font-style: italic; }

.wrap { margin: 0 auto; max-width: 1280px; }

.article article { background: #fff; min-height: 100vh; }
.article article > .wrap { display: flex; font-size: 1rem; padding: 0 1rem; }
.article aside { margin-right: 3rem; margin-top: 1.80rem; }
.article aside button { display: none; }
.article aside ul { list-style-type: none; padding: 0; }
.article aside > ul { margin-top: 3rem; }
.article aside li > ul { padding-left: 1rem; }
.article aside li { white-space: nowrap; }
.article aside ul a { display: block; font-size: 1.1rem; margin: 0.1rem 0; padding: 0.3rem 0.6rem; }
.article aside ul a, .article aside ul a:visited { color: #333; }
.article aside ul a:hover, .article aside ul a.expanded { background: #f8f6f0; border-radius: 3px; }
.article aside ul a.selected { background: #f3ad20; border-radius: 3px; color: #fff6ed; }
.article .content { flex-grow: 1; margin: 0 0 4em 0; min-width: 0; }
/* ... */

